--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
 - operator_v1_installation.yaml
+- operator_v1_tenant.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
