--- a/pkg/crds/operator/operator.tigera.io_tenants.yaml
+++ b/pkg/crds/operator/operator.tigera.io_tenants.yaml
@@ -13,7 +13,7 @@ spec:
     listKind: TenantList
     plural: tenants
     singular: tenant
-  scope: Namespaced
+  scope: Cluster
   versions:
   - name: v1
     schema:
