operator-sdk create api --group=operator.tigera.io --version=v1 --kind=DemoResource --resource --controller

--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -23,4 +23,5 @@ resources:
 - operator_v1_tigerastatus.yaml
 - operator_v1_tlspassthroughroute.yaml
 - operator_v1_tlsterminatedroute.yaml
+- operator_v1_demoresource.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
