--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -24,6 +24,7 @@ resources:
 - bases/operator.tigera.io_tlspassthroughroutes.yaml
 - bases/operator.tigera.io_tlsterminatedroutes.yaml
 
+- bases/operator.tigera.io_demoresources.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -34,6 +35,7 @@ patches:
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- path: patches/cainjection_in_foos.yaml
+#- path: patches/cainjection_in_demoresources.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
