Voltron token rbac

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -7,8 +7,9 @@ components:
     image: tigera/cnx-manager
     version: master
   voltron:
-    image: tigera/voltron
-    version: master
+    registry: gcr.io/unique-caldron-775/
+    image: casey/voltron
+    version: ft
   cnx-apiserver:
     image: tigera/cnx-apiserver
     version: master
