Use new node build

--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -6,7 +6,9 @@ components:
   typha:
     version: master
   calico/node:
-    version: master
+    registry: docker.io/caseydavenport/
+    image: node
+    version: ft
   calico/cni:
     version: master
   calico/node-windows:
